--- a/ReadMe
+++ b/ReadMe
@@ -15,3 +15,5 @@ Haefner_WAVE_Simulations_trimmed.xlsx - a reduced version of HAEFNER_WAVE_simula
 Opt Results.xlsx - Excel file with optimization results. This file is used in analyzing_converged_results_V2.m. This is a temporary file. Once made official, it will be renamed Haefner_...
 
 analyzing_converged_results_v2.m - MATLAB file used to generate figures for processing optimization results. This file uses Opt Results.xlsx. This is a temporary file. Once made official, it will be renamed Haefner_...
+
+making_residual_plots.m - temporary file
